gcc/testsuite/rust/rustc/ui/parser/issues/issue-62881.rs
fn main() {}

fn f() -> isize { fn f() -> isize {} pub f< // { dg-error "" "" { target *-*-* } }

